--- a/index.html
+++ b/index.html
@@ -1,44 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
+
+  <title>Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
+  <header>
+    <h1>Spli<br>ter</h1>
+  </header>
+  <form>
+    <div>
+      <label>
+        Bill
+        <input type="number" placeholder="$">
+      </label>
+    </div>
+    <div>
+      <label>
+        <h2>Select Tip %</h2>
+      </label>
+      <div>
+        <input type="button" value="5%">
+        <input type="button" value="10%">
+        <input type="button" value="15%">
+        <input type="button" value="25%">
+        <input type="button" value="50%">
+        <input type="button" value="Custom">
+      </div>
+    </div>
+    <div>
+      <label>Number of People
+        <input type="number">
+      </label>
+    </div>
+    <div>
+      <label>Tip Amount</label>
+      <input type="number" placeholder="/ person "> 
+    </div>  
+    </div>
+    <div>   
+      <label>Total</label>
+      <input type="number" placeholder="/ person "> 
+    </div>  
+    <input type="button" value="Reset">
+    </div>
+  </form>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Odisseu93">Ulisses silvério</a>.
   </div>
 </body>
+
 </html>
