added tags main and footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <header>
     <h1>Spli<br>ter</h1>
   </header>
+  <main>
   <form>
     <div>
       <label>
@@ -64,10 +65,11 @@
     <input type="button" value="Reset">
     </div>
   </form>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Odisseu93">Ulisses silvério</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
