--- a/index.html
+++ b/index.html
@@ -28,43 +28,43 @@
     <h1>Spli<br>ter</h1>
   </header>
   <main>
-  <form>
-    <div>
-      <label>
-        Bill
-        <input type="number" placeholder="$">
-      </label>
-    </div>
-    <div>
-      <label>
-        <h2>Select Tip %</h2>
-      </label>
-      <div>
+    <form>
+      <article>
+        <label>
+          Bill
+          <input type="number" placeholder="$">
+        </label>
+      </article>
+      <article>
+        <label>
+          <h2>Select Tip %</h2>
+        </label>
+        </div>
         <input type="button" value="5%">
         <input type="button" value="10%">
         <input type="button" value="15%">
         <input type="button" value="25%">
         <input type="button" value="50%">
         <input type="button" value="Custom">
-      </div>
-    </div>
-    <div>
-      <label>Number of People
-        <input type="number">
-      </label>
-    </div>
-    <div>
-      <label>Tip Amount</label>
-      <input type="number" placeholder="/ person "> 
-    </div>  
-    </div>
-    <div>   
-      <label>Total</label>
-      <input type="number" placeholder="/ person "> 
-    </div>  
-    <input type="button" value="Reset">
-    </div>
-  </form>
+        </div>
+        <div>
+          <label>Number of People
+            <input type="number">
+          </label>
+        </div>
+      </article>
+      <article>
+        <div>
+          <label>Tip Amount</label>
+          <input type="number" placeholder="/ person ">
+        </div>
+        <div>
+          <label>Total</label>
+          <input type="number" placeholder="/ person ">
+        </div>
+        <input type="button" value="Reset">
+      </article>
+    </form>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
