altered <label>Number of People</label> to <label><h2>Number of People</h2></label>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <input type="button" value="Custom">
         </div>
         <div>
-          <label>Number of People
+          <label><h2>Number of People</h2>
             <input type="number">
           </label>
         </div>
