Added class to some elements

--- a/index.html
+++ b/index.html
@@ -24,43 +24,43 @@
 </head>
 
 <body>
-  <header>
-    <h1>Spli<br>ter</h1>
+  <header class="hdr">
+    <h1 >Spli<br>ter</h1>
   </header>
   <main>
     <form>
-      <article>
+      <article class="art-bill">
         <label>
           Bill
-          <input type="number" placeholder="$">
+          <input type="number" clas="art-bill-input" placeholder="$">
         </label>
       </article>
-      <article>
+      <article class="art-selecTip">
         <label>
-          <h2>Select Tip %</h2>
+          <h2 class="art-title">Select Tip %</h2>
         </label>
         </div>
-        <input type="button" value="5%">
-        <input type="button" value="10%">
-        <input type="button" value="15%">
-        <input type="button" value="25%">
-        <input type="button" value="50%">
-        <input type="button" value="Custom">
+        <input type="button" class="art-selecTip-input" value="5%">
+        <input type="button" class="art-selecTip-input" value="10%">
+        <input type="button" class="art-selecTip-input" value="15%">
+        <input type="button" class="art-selecTip-input" value="25%">
+        <input type="button" class="art-selecTip-input" value="50%">
+        <input type="button" class="art-selecTip-input" value="Custom">
         </div>
         <div>
-          <label><h2>Number of People</h2>
+          <label><h2 class="art-title">Number of People</h2>
             <input type="number">
           </label>
         </div>
       </article>
-      <article>
+      <article class="art-result">
         <div>
-          <label>Tip Amount</label>
-          <input type="number" placeholder="/ person ">
+          <label class="art-resul-title">Tip Amount</label>
+          <input type="number" class="art-resul-input" placeholder="/ person ">
         </div>
         <div>
-          <label>Total</label>
-          <input type="number" placeholder="/ person ">
+          <label class="art-resul-title">Total</label>
+          <input type="number" class="art-resul-input" placeholder="/ person ">
         </div>
         <input type="button" value="Reset">
       </article>
