Altered <label>Bill</label> to <label><h2>Bill</h2></label>

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
 <body>
   <header class="hdr">
-    <h1 >Spli<br>ter</h1>
+    <h1>Spli<br>ter</h1>
   </header>
   <main>
     <form>
       <article class="art-bill">
         <label>
-          Bill
+          <h2 class="art-title">Bill</h2>
           <input type="number" clas="art-bill-input" placeholder="$">
         </label>
       </article>
@@ -48,7 +48,8 @@
         <input type="button" class="art-selecTip-input" value="Custom">
         </div>
         <div>
-          <label><h2 class="art-title">Number of People</h2>
+          <label>
+            <h2 class="art-title">Number of People</h2>
             <input type="number">
           </label>
         </div>
