added the font Space Mono
style
-:root {
  font-family: 'Space Mono', monospace;
  font-weight: 800;
}

- .art-bill-input,.art-selecTip-input,.art-selectTip-numberOfPeople-input,.art-resul-input {
  font-size: 24px;
}

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div>
           <label>
             <h2 class="art-title">Number of People</h2>
-            <input type="number">
+            <input type="number" class="art-selectTip-numberOfPeople-input">
           </label>
         </div>
       </article>
