added images icon-dollar and icon-person

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <article class="art-bill">
         <label>
           <h2 class="art-title">Bill</h2>
-          <input type="number" clas="art-bill-input" placeholder="$">
+          <img  sizes="32x32" src="images\icon-dollar.svg">
+          <input type="number" clas="art-bill-input" placeholder="0">
         </label>
       </article>
       <article class="art-selecTip">
@@ -54,6 +55,7 @@
         <div>
           <label>
             <h2 class="art-title">Number of People</h2>
+            <img  sizes="32x32" src="images\icon-person.svg">
             <input type="number" class="art-selectTip-numberOfPeople-input">
           </label>
         </div>
