altered .art-result structure

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
       </article>
       <article class="art-result">
         <div>
-          <label class="art-resul-title">Tip Amount</label>
-          <input type="number" class="art-resul-input" placeholder="/ person ">
+          <label class="art-resul-lbl1">Total<br></label>
+          <label class="art-resul-lbl2">/ person</label>
+          <label class="art-resul-lbl2">$0,00</label>
         </div>
         <div>
-          <label class="art-resul-title">Total</label>
-          <input type="number" class="art-resul-input" placeholder="/ person ">
+          <label class="art-resul-lbl1">Tip Amount<br></label>
+          <label class="art-resul-lbl2">/ person</label>
+          <label class="art-resul-lbl2">$0,00</label>
         </div>
         <input type="button" value="Reset">
       </article>
