stylization of .art-result

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
       </article>
       <article class="art-result">
         <div>
-          <label class="art-resul-lbl1">Total<br></label>
-          <label class="art-resul-lbl2">/ person</label>
-          <label class="art-resul-lbl2">$0,00</label>
-        </div>
-        <div>
           <label class="art-resul-lbl1">Tip Amount<br></label>
           <label class="art-resul-lbl2">/ person</label>
-          <label class="art-resul-lbl2">$0,00</label>
+          <label class="art-resul-lbl3">$0,00</label>
         </div>
-        <input type="button" value="Reset">
+        <div>
+          <label class="art-resul-lbl1">Total<br></label>
+          <label class="art-resul-lbl2">/ person</label>
+          <label class="art-resul-lbl3">$0,00</label>
+        </div>
+        <input type="button" value="Reset" class="btnReset" id="btnReset">
       </article>
     </form>
   </main>
