--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </article>
     </form>
   </main>
+  <script src="script.js"></script>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Odisseu93">Ulisses silvério</a>.
