addeed id on art-selecTip-input

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           <h2 class="art-title">Select Tip %</h2>
         </label>
         </div>
-        <input type="button" class="art-selecTip-input" value="5%">
-        <input type="button" class="art-selecTip-input" value="10%">
-        <input type="button" class="art-selecTip-input" value="15%">
-        <input type="button" class="art-selecTip-input" value="25%">
-        <input type="button" class="art-selecTip-input" value="50%">
-        <input type="button" class="art-selecTip-input" value="Custom">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-5" value="5%">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-10" value="10%">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-15" value="15%">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-25" value="25%">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-50" value="50%">
+        <input type="button" class="art-selecTip-input" id="btn-selecTip-custom" value="Custom">
         </div>
         <div>
           <label>
