addeed id on art-resul-lbl3

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <div>
           <label class="art-resul-lbl1">Tip Amount<br></label>
           <label class="art-resul-lbl2">/ person</label>
-          <label class="art-resul-lbl3">$0,00</label>
+          <label class="art-resul-lbl3" id="art-resul-lbl3-person">$0,00</label>
         </div>
         <div>
           <label class="art-resul-lbl1">Total<br></label>
           <label class="art-resul-lbl2">/ person</label>
-          <label class="art-resul-lbl3">$0,00</label>
+          <label class="art-resul-lbl3" id="art-resul-lbl3-total">$0,00</label>
         </div>
         <input type="button" value="Reset" class="btnReset" id="btnReset">
       </article>
