added functions to buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <label>
           <h2 class="art-title">Bill</h2>
           <img  sizes="32x32" src="images\icon-dollar.svg">
-          <input type="number" clas="art-bill-input" placeholder="0">
+          <input type="number" clas="art-bill-input" id="art-bill-input-id" placeholder="0">
         </label>
       </article>
       <article class="art-selecTip">
@@ -56,7 +56,7 @@
           <label>
             <h2 class="art-title">Number of People</h2>
             <img  sizes="32x32" src="images\icon-person.svg">
-            <input type="number" class="art-selectTip-numberOfPeople-input">
+            <input type="number" class="art-selectTip-numberOfPeople-input" id="art-selectTip-numberOfPeople-input">
           </label>
         </div>
       </article>
