--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div>
           <label>
             <h2 class="art-title">Number of People</h2>
-            <input type="number" class="art-selectTip-numberOfPeople-input" id="art-selectTip-numberOfPeople-input">
+            <input type="number" class="art-selectTip-numberOfPeople-input" id="art-selectTip-numberOfPeople-input" placeholder="0">
           </label>
         </div>
       </article>
