added function to btnCustom

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <input type="button" class="art-selecTip-input" id="btn-selecTip-15" value="15%">
         <input type="button" class="art-selecTip-input" id="btn-selecTip-25" value="25%">
         <input type="button" class="art-selecTip-input" id="btn-selecTip-50" value="50%">
-        <input type="button" class="art-selecTip-input" id="btn-selecTip-custom" value="Custom">
+        <input type="number" class="art-selecTip-input" id="btn-selecTip-custom" placeholder="Custom">
         </div>
         <div>
           <label>
